
#ADD_EXECUTABLE( test_fefunction test_fefunction.cpp )
#TARGET_LINK_LIBRARIES( test_fefunction ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )

#ADD_EXECUTABLE( test_load2 test_load2.cpp )
#TARGET_LINK_LIBRARIES( test_load2 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )

#ADD_EXECUTABLE( maxwell_complex maxwell_complex.cc )
#TARGET_LINK_LIBRARIES( maxwell_complex ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )

#ADD_EXECUTABLE( maxwell0 maxwell0.cpp )
#TARGET_LINK_LIBRARIES( maxwell0 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )

# ADD_EXECUTABLE( maxwell1 maxwell1.cpp )
# TARGET_LINK_LIBRARIES( maxwell1 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
# 
# ADD_EXECUTABLE( maxwell2 maxwell2.cpp )
# TARGET_LINK_LIBRARIES( maxwell2 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
# 
# ADD_EXECUTABLE( maxwell3 maxwell3.cpp )
# TARGET_LINK_LIBRARIES( maxwell3 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
# 
# ADD_EXECUTABLE( maxwell4 maxwell4.cpp )
# TARGET_LINK_LIBRARIES( maxwell4 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
# 
# ADD_EXECUTABLE( testBC testBC.cc )
# TARGET_LINK_LIBRARIES( testBC ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
# 
# ADD_EXECUTABLE( step-3 step-3.cc )
# TARGET_LINK_LIBRARIES( step-3 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
# 
# ADD_EXECUTABLE( step-40 step-40.cc )
# TARGET_LINK_LIBRARIES( step-40 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
 
#ADD_EXECUTABLE( test_store test_store.cc )
#TARGET_LINK_LIBRARIES( test_store ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )

#ADD_EXECUTABLE( test_load test_load.cc )
#TARGET_LINK_LIBRARIES( test_load ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )

#ADD_EXECUTABLE( test_random test_random.cpp )
#TARGET_LINK_LIBRARIES( test_random m )
